Refined UI Pages

--- a/FrontEnd/src/custemer-pro.html
+++ b/FrontEnd/src/custemer-pro.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <title>Custemer-pro</title>
   </head>
   <body>
+    <nav>
+      <input id="nav-toggle" type="checkbox" />
+      <img src="img/logo.jpg" alt="logo" class="logo" />
+      <ul class="links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="find_tec.html">Find Technicians</a></li>
+        <li class="btn"><a href="login.html">Login</a></li>
+      </ul>
+      <label for="nav-toggle" class="icon-burger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </label>
+    </nav>
     <div class="profile-container">
       <h1 class="title">Customer Profile</h1>
 
@@ -14,10 +28,11 @@
         <!-- Customer information display -->
         <div class="profile-details">
           <img
-            src="https://via.placeholder.com/150"
+            src="img/logo-user.png"
             alt="Profile Picture"
             class="profile-pic"
           />
+
           <div class="info">
             <h2>Customer Information</h2>
             <p>Name: John Doe</p>
@@ -28,11 +43,8 @@
       </div>
 
       <div class="previous-bookings">
-        <!-- Previous booked technicians -->
-        <h2>Previous Bookings</h2>
-
-        <!-- Booking 1 -->
         <div class="booking-item">
+          <h2>Bookings</h2>
           <div class="tecntians">
             <div>
               <h3>Mamo Demsew</h3>
@@ -41,115 +53,181 @@
               <h5>Email:mamodemsew@email.com</h5>
             </div>
             <div>
-              <p>Date: January 1, 2023</p>
-              <p>Booked Date: January 1, 2023</p>
-              <p>Service Date: January 5, 2023</p>
-              <p>Service Needed: Repair</p>
-              <p>Problem Description: Description of the problem</p>
-              <p>Service Location: Address</p>
-              <p>Status: Pending</p>
+              <form
+                class="service-form"
+                id="serviceForm"
+                onsubmit="return false"
+              >
+                <label for="bookedDate" class="form-label"
+                  ><strong>Booked Date</strong>:</label
+                >
+                <input
+                  type="text"
+                  id="bookedDate"
+                  name="bookedDate"
+                  class="form-input"
+                  value="January 1, 2023"
+                  required
+                  disabled
+                />
+
+                <label for="serviceDate" class="form-label"
+                  ><strong>Service Date</strong>:</label
+                >
+                <input
+                  type="text"
+                  id="serviceDate"
+                  name="serviceDate"
+                  class="form-input"
+                  value="January 5, 2023"
+                  required
+                  disabled
+                />
+
+                <label for="serviceNeeded" class="form-label"
+                  ><strong>Service Needed</strong>:</label
+                >
+                <input
+                  type="text"
+                  id="serviceNeeded"
+                  name="serviceNeeded"
+                  class="form-input"
+                  value="Repair"
+                  required
+                  disabled
+                />
+
+                <label for="problemDescription" class="form-label"
+                  ><strong>Problem Description</strong>:</label
+                >
+                <textarea
+                  id="problemDescription"
+                  name="problemDescription"
+                  class="form-textarea"
+                  rows="4"
+                  required
+                  disabled
+                >
+Description of the problem</textarea
+                >
+
+                <label for="serviceLocation" class="form-label"
+                  ><strong>Service Location</strong>:</label
+                >
+                <input
+                  type="text"
+                  id="serviceLocation"
+                  name="serviceLocation"
+                  class="form-input"
+                  value="Address"
+                  required
+                  disabled
+                />
+
+                <label for="status" class="form-label"
+                  ><strong>Status</strong>:</label
+                >
+
+                <input
+                  type="text"
+                  id="status"
+                  name="status"
+                  class="form-input"
+                  value="Pending"
+                  required
+                  disabled
+                />
+
+                <button class="form-button edit" onclick="editForm()">
+                  edit
+                </button>
+                <button
+                  class="form-button button_is_hidden save"
+                  onclick="saveForm()"
+                >
+                  save
+                </button>
+                <button
+                  class="form-button button_is_hidden cancel-button cancel"
+                  onclick="cancelForm()"
+                >
+                  cancel
+                </button>
+              </form>
             </div>
           </div>
-
-          <!-- Buttons for editing, saving, and canceling -->
-          <div class="booking-buttons">
-            <button class="edit-button">Edit</button>
-            <button class="save-button">Save</button>
-            <button class="cancel-button">Cancel Booking</button>
-          </div>
         </div>
-
-        <!-- Add more booked technicians as required -->
       </div>
     </div>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-logo">
+            <img class="logo" src="img/logo.jpg" alt="SkillTrade Hub" />
+            <p>Your go-to platform for skilled trades!</p>
+          </div>
+          <div class="footer-links">
+            <h4>Quick Links</h4>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="find_tec.html">Find Technicians</a></li>
+            </ul>
+          </div>
+          <div class="footer-social">
+            <h4>Connect with Us</h4>
+            <ul>
+              <li>
+                <a href="#"><i class="fab fa-facebook-f">facebook</i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter">twittter</i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram">instagram</i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2024 SkillTrade Hub. All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
     <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const editButton = document.querySelector(".edit-button");
-        const saveButton = document.querySelector(".save-button");
-        const cancelButton = document.querySelector(".cancel-button");
-        const bookingItem = document.querySelector(".booking-item");
+      var editButton = document.querySelector(".edit");
+      var saveButton = document.querySelector(".save");
+      var cancelButton = document.querySelector(".cancel");
 
-        let isEditing = false;
-        let originalBookingData = null;
+      function saveForm() {
+        enableFormFields(false);
+        saveButton.classList.toggle("button_is_hidden");
+        cancelButton.classList.toggle("button_is_hidden");
+        editButton.classList.toggle("button_is_hidden");
+      }
 
-        editButton.addEventListener("click", function () {
-          if (!isEditing) {
-            // Enable editing
-            enableEdit();
-          }
-        });
+      function editForm() {
+        enableFormFields(true);
+        saveButton.classList.toggle("button_is_hidden");
+        cancelButton.classList.toggle("button_is_hidden");
+        editButton.classList.toggle("button_is_hidden");
+      }
 
-        saveButton.addEventListener("click", function () {
-          if (isEditing) {
-            // Save changes
-            saveBookingData();
-          }
-        });
+      function cancelForm() {
+        document.getElementById("serviceForm").reset();
+        enableFormFields(false);
+        saveButton.classList.toggle("button_is_hidden");
+        cancelButton.classList.toggle("button_is_hidden");
+        editButton.classList.toggle("button_is_hidden");
+      }
 
-        cancelButton.addEventListener("click", function () {
-          if (isEditing) {
-            // Cancel editing
-            cancelEditing();
-          } else {
-            // Cancel booking
-            cancelBooking();
-          }
-        });
+      function enableFormFields(enable) {
+        var form = document.getElementById("serviceForm");
+        var formElements = form.elements;
 
-        function enableEdit() {
-          // Store original booking data before editing
-          originalBookingData = bookingItem.innerHTML;
-
-          // Example: Enable editing by allowing contenteditable
-          const fieldsToEdit = bookingItem.querySelectorAll("p");
-          fieldsToEdit.forEach((field) => {
-            field.contentEditable = true;
-            field.classList.add("editable");
-          });
-
-          // Toggle buttons
-          editButton.style.display = "none";
-          saveButton.style.display = "inline-block";
-          cancelButton.innerText = "Cancel Edit";
-
-          isEditing = true;
+        for (var i = 1; i < formElements.length - 4; i++) {
+          formElements[i].disabled = !enable;
         }
-
-        function saveBookingData() {
-          // Example: Save changes by updating data in an object or sending to a backend
-          const editedFields = bookingItem.querySelectorAll(".editable");
-          editedFields.forEach((field) => {
-            field.contentEditable = false;
-            field.classList.remove("editable");
-          });
-
-          // Toggle buttons back to initial state
-          editButton.style.display = "inline-block";
-          saveButton.style.display = "none";
-          cancelButton.innerText = "Cancel Booking";
-
-          isEditing = false;
-        }
-
-        function cancelEditing() {
-          // Restore original booking data
-          bookingItem.innerHTML = originalBookingData;
-
-          // Toggle buttons back to initial state
-          editButton.style.display = "inline-block";
-          saveButton.style.display = "none";
-          cancelButton.innerText = "Cancel Booking";
-
-          isEditing = false;
-        }
-
-        function cancelBooking() {
-          // Implement your logic to cancel the booking here
-          // This function can perform actions like marking the booking as canceled in the backend or UI updates
-          // For example, remove the booking entry or mark it as canceled
-          console.log("Booking canceled.");
-        }
-      });
+      }
     </script>
   </body>
 </html>
