made changes regarding technician profile read-update

--- a/FrontEnd/src/technician-profile.html
+++ b/FrontEnd/src/technician-profile.html
@@ -22,6 +22,9 @@
               <p>Name: John Doe</p>
               <p>Email: john@example.com</p>
             </div>
+            <div class="full-technician-profile">
+
+            </div>
           </div>
         </div>
 
@@ -55,5 +58,6 @@
         </div>
       </div>
     </div>
+
   </body>
 </html>
