Relation in database re configuration

--- a/FrontEnd/src/signup.html
+++ b/FrontEnd/src/signup.html
@@ -112,7 +112,7 @@
                 id="technician-skills"
                 name="skills"
                 placeholder="Skills"
-                
+                required
               />
               <input
                 type="text"
@@ -126,7 +126,7 @@
                 id="technician-educationLevel"
                 name="educationLevel"
                 placeholder="Education Level"
-                
+                required
               />
               <input
                 type="text"
