--- a/FrontEnd/src/find_tec.html
+++ b/FrontEnd/src/find_tec.html
@@ -22,62 +22,6 @@
       </label>
     </nav>
     <div class="technicians">
-      <div class="technician-card">
-        <img src="img/logo-tech.png" alt="Technician 1" />
-        <h2>Mamo Kumilachew</h2>
-        <p>Specialty: Dish Network technician</p>
-
-        <a href="booking.html" class="book-btn">Get Technician</a>
-      </div>
-      <div class="technician-card">
-        <img src="img/logo-tech.png" alt="Technician 2" />
-        <h2>Alemu Tasew</h2>
-        <p>Specialty: Plumbing</p>
-        <a href="booking.html" class="book-btn">Get Technician</a>
-      </div>
-      <div class="technician-card">
-        <img src="img/logo-tech.png" alt="Technician 2" />
-        <h2>Damtew Bogale</h2>
-        <p>Specialty: Carpenter</p>
-        <a href="booking.html" class="book-btn">Get Technician</a>
-      </div>
-      <div class="technician-card">
-        <img src="img/logo-tech.png" alt="Technician 2" />
-        <h2>Demsashi Behulu</h2>
-        <p>Specialty: Roofing Contractor</p>
-        <a href="booking.html" class="book-btn">Get Technician</a>
-      </div>
-      <div class="technician-card">
-        <img src="img/logo-tech.png" alt="Technician 2" />
-        <h2>Aynalem Mebratu</h2>
-        <p>Specialty: Electrician</p>
-        <a href="booking.html" class="book-btn">Get Technician</a>
-      </div>
-      <div class="technician-card">
-        <img src="img/logo-tech.png" alt="Technician 2" />
-        <h2>Dinku Dagne</h2>
-        <p>Specialty: Landscaper/Gardener</p>
-        <a href="booking.html" class="book-btn">Get Technician</a>
-      </div>
-
-      <div class="technician-card">
-        <img src="img/logo-tech.png" alt="Technician 2" />
-        <h2>Geremew Dagne</h2>
-        <p>Specialty: Electrician</p>
-        <a href="booking.html" class="book-btn">Get Technician</a>
-      </div>
-      <div class="technician-card">
-        <img src="img/logo-tech.png" alt="Technician 2" />
-        <h2>Dnke Lehulu</h2>
-        <p>Specialty: Mason</p>
-        <a href="booking.html" class="book-btn">Get Technician</a>
-      </div>
-      <div class="technician-card">
-        <img src="img/logo-tech.png" alt="Technician 2" />
-        <h2>Mamush Labatu</h2>
-        <p>Specialty: HVAC Technician</p>
-        <a href="booking.html" class="book-btn">Get Technician</a>
-      </div>
     </div>
 
     <footer class="footer">
@@ -114,5 +58,6 @@
         </div>
       </div>
     </footer>
+    <script src="../fetch/technicianFetch.js"></script>
   </body>
 </html>
