Refined UI Pages again

--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -22,6 +22,76 @@
       </label>
     </nav>
     <div class="both">
+      <div class="about_us">
+        <div>
+          <h1 class="h2">SkillTrade Hub</h1>
+          <p>
+            Home technicians play a crucial role in ensuring the smooth
+            functioning and maintenance of various household systems and
+            appliances. These skilled professionals possess a diverse range of
+            expertise, from plumbing and electrical work to HVAC maintenance and
+            appliance repair. When an issue arises within the intricate network
+            of a home's infrastructure, it is the home technician who is called
+            upon to diagnose, troubleshoot, and implement effective solutions.
+            Their proficiency not only saves homeowners from the inconvenience
+            of malfunctioning systems but also contributes to the overall safety
+            and efficiency of the living space. Beyond their technical skills,
+            home technicians often exhibit excellent problem-solving abilities,
+            customer service, and a deep understanding of the latest
+            technologies in their respective fields. In many ways, these unsung
+            heroes of household maintenance play a vital role in enhancing the
+            quality of life and ensuring the longevity of the systems that make
+            a house a comfortable and functional home.
+          </p>
+        </div>
+
+        <img src="img/technician.jpg" alt="skillTrade" />
+      </div>
+      <h2 class="h2">Our Services</h2>
+      <section class="services">
+        <div class="service-card">
+          <h3 class="h2">Plumbing Services</h3>
+          <img src="img/plumbing.jpg" alt="Plumbing Service" />
+
+          <p>
+            Our expert plumbers are ready to tackle any plumbing issue in your
+            home. From leaks to pipe installations, we ensure quality
+            workmanship.
+          </p>
+        </div>
+
+        <div class="service-card">
+          <h3 class="h2">Electrical Work</h3>
+          <img src="img/electrician.jpeg" alt="Electrical Work" />
+
+          <p>
+            Need electrical repairs or installations? Our skilled electricians
+            are trained to handle a wide range of electrical services, ensuring
+            your home's safety.
+          </p>
+        </div>
+
+        <div class="service-card">
+          <h3 class="h2">HVAC Maintenance</h3>
+          <img src="img/hvac.jpg" alt="HVAC Maintenance" />
+
+          <p>
+            Keep your home comfortable year-round with our HVAC maintenance
+            services. Our technicians will keep your heating and cooling systems
+            in top condition.
+          </p>
+        </div>
+
+        <div class="service-card">
+          <h3 class="h2">Desh Technician</h3>
+          <img src="img/desh-technician.jpg" alt="Desh_technician" />
+
+          <p>
+            Is your desh-technician acting up? Our technicians specialize in
+            deshi repair, ensuring your household devices work efficiently.
+          </p>
+        </div>
+      </section>
       <section class="hero">
         <div class="container">
           <h2>Find Skilled Technicians for Your Home Services</h2>
