Customer dashboard and modularized fetches

--- a/FrontEnd/src/booking.html
+++ b/FrontEnd/src/booking.html
@@ -104,6 +104,6 @@
         </div>
       </div>
     </footer>
-    <script src="../fetch/BookingsFetch.js"></script>
+    <script type="module" src="../fetch/individualTechBooking.js"></script>
   </body>
 </html>
