--- a/FrontEnd/src/find_tec.html
+++ b/FrontEnd/src/find_tec.html
@@ -58,6 +58,7 @@
         </div>
       </div>
     </footer>
-    <script src="../fetch/technicianFetch.js"></script>
+    <script type="module" src="../fetch/findTech.js"></script>
+    
   </body>
 </html>
