--- a/FrontEnd/src/booking.html
+++ b/FrontEnd/src/booking.html
@@ -8,19 +8,8 @@
   </head>
   <body>
     <nav>
-      <input id="nav-toggle" type="checkbox" />
-      <img src="img/logo.jpg" alt="logo" class="logo" />
-      <ul class="links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="find_tec.html">Find Technicians</a></li>
-        <li class="btn"><a href="login.html">Login</a></li>
-      </ul>
-      <label for="nav-toggle" class="icon-burger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </label>
     </nav>
+    <script src="../fetch/navbarjs.js"></script>
     <div class="all-container">
       <div class="profile-conta">
         <h1>Technician</h1>
