--- a/FrontEnd/src/customer-profile.html
+++ b/FrontEnd/src/customer-profile.html
@@ -7,7 +7,7 @@
     <title>Customer Dashboard</title>
   </head>
   <body>
-    <nav>
+    <!-- <nav>
       <input id="nav-toggle" type="checkbox" />
       <img src="img/logo.jpg" alt="logo" class="logo" />
       <ul class="links">
@@ -20,7 +20,10 @@
         <div class="line"></div>
         <div class="line"></div>
       </label>
+    </nav> -->
+    <nav>
     </nav>
+    <script src="../fetch/navbarjs.js"></script>
     <div class="profile-container">
       <h1 class="title">Customer Profile</h1>
 
