--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -7,7 +7,7 @@
     <title>Skill Trade</title>
   </head>
   <body>
-    <nav>
+    <!-- <nav>
       <input id="nav-toggle" type="checkbox" />
       <img src="img/logo.jpg" alt="logo" class="logo" />
       <ul class="links">
@@ -20,7 +20,10 @@
         <div class="line"></div>
         <div class="line"></div>
       </label>
+    </nav> -->
+    <nav>
     </nav>
+    <script src="../fetch/navbarjs.js"></script>
     <div class="both">
       <div class="about_us">
         <div>
@@ -116,7 +119,6 @@
             <h4>Quick Links</h4>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="find_tec.html">Find Technicians</a></li>
             </ul>
           </div>
           <div class="footer-social">
