made the update booking functionality on frontend

--- a/FrontEnd/src/customer-profile.html
+++ b/FrontEnd/src/customer-profile.html
@@ -78,6 +78,8 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="../fetch/customerDashboard.js"></script>
+    <script type="module" src="../fetch/customerDashboard.js">
+      
+    </script>
   </body>
 </html>
